--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -53,7 +53,7 @@
                             Password must be at least 4 characters long.
                         </div>
             
-                        <button mat-raised-button type="submit" (click)="onLogin()" class="btn mtcard">Login</button>
+                        <button mat-raised-button type="submit" (click)="onLogin()" class="btn mtcard" style="background: aquamarine;">Login</button>
             
                         <div fxLayoutAlign="center center">
                             <p style="margin-top:25px">Don't have an Account ? &nbsp;
