--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -14,7 +14,7 @@
 </head> -->
 <div class="row" style="height:100%">
     <div class="col-md-12" style="margin-top: 100px;">
-        <div class="main-card mb-3 card" style="width: 100%x;">
+        <div class="main-card mb-3 card" style="width: 100%;">
             <div style="font-size: 24px;">
                 <!-- Chat Profiles Here..! -->
                 <div class="add-refresh">
