--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -8,36 +8,36 @@
     <br>
     <!-- <h2 matSubheader class="mt-2"> Former Market</h2> -->
     <li [routerLink]="['/home']">
-        <a mat-list-item routerLinkActive="list-item-active">
+        <a mat-list-item routerLinkActive="list-item-active" style="font-size: 20px;">
             <mat-icon>home</mat-icon> Home
         </a>
     </li>
 
     <li [routerLink]="['/dashboard']">
-        <a mat-list-item routerLinkActive="list-item-active">
+        <a mat-list-item routerLinkActive="list-item-active" style="font-size: 20px;">
             <mat-icon>dashboard</mat-icon> Dashboard
         </a>
     </li>
     <li [routerLink]="['/messages']">
-        <a mat-list-item routerLinkActive="list-item-active">
+        <a mat-list-item routerLinkActive="list-item-active" style="font-size: 20px;">
             <mat-icon>chat</mat-icon> Messages
         </a>
 
     </li>
     <li>
-        <a mat-list-item>
-            <mat-icon>edit</mat-icon> Ex 01
+        <a mat-list-item style="font-size: 20px;">
+            <mat-icon>save</mat-icon> Saved Items
         </a>
     </li>
-
+    
     <li>
-        <a mat-list-item>
-            <mat-icon>edit</mat-icon> Ex 02
+        <a mat-list-item style="font-size: 20px;">
+            <mat-icon>account_circle</mat-icon> Profile
         </a>
     </li>
     <li>
-        <a mat-list-item>
-            <mat-icon>edit</mat-icon> Ex 03
+        <a mat-list-item style="font-size: 20px;">
+            <mat-icon>settings</mat-icon> Settings
         </a>
     </li>
 </mat-nav-list>
